--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-  <header class="header">
+  <header class="header position-fixed top-0 w-100">
     <nav class="header__nav navbar navbar-expand-xl navbar-light bg-light">
       <div class="container">
         <a href="#" class="logo navbar-brand"><img src="./img/Pompeo.png" alt=""></a>
@@ -32,8 +32,20 @@
   </header>
   
   <main>
-    <section class="murod">
-      
+    <section class="murod d-flex align-items-center">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-6">
+            <p class="text-danger popins text-uppercase">Pompeo POttery</p>
+            <h1 class="popins fw-bold font-size-43">Unique Porcelain <span class="playfair text-danger font-size-68">&</span> <br> Stone Collection</h1>
+            <p class="text-secondary libre mt-4 mb-5">Unique & modern pottery made by our master in porcelain & stones</p>
+            <a href="#" class="btn btn-danger fw-bold py-2 px-4 font-size-12 rounded-0">Shop Collection</a>
+          </div>
+          <div class="col-6">
+            <img src="./img/image.png" alt="">
+          </div>
+        </div>
+      </div>
     </section>
     
     <section class="shuxrat">
