--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,12 +10,14 @@
   <link rel="stylesheet" href="./css/bootstrap.min.css">
   <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
   <header class="header position-fixed top-0 w-100">
     <nav class="header__nav navbar navbar-expand-xl navbar-light bg-light">
       <div class="container">
         <a href="#" class="logo navbar-brand"><img src="./img/Pompeo.png" alt=""></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu" aria-controls="navbarBasic" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu"
+          aria-controls="navbarBasic" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="menu">
@@ -24,39 +27,99 @@
             <li class="nav-item"><a href="#" class="nav-link text-uppercase header__link"> Home </a></li>
             <li class="nav-item"><a href="#" class="nav-link text-uppercase header__link"> Contact </a></li>
             <li class="nav-item d-xl-flex d-none"> <i class="line "></i> </li>
-            <li class="nav-item"><a href="#" class="nav-link text-uppercase header__link header__link_color-black"> <i class="bi bi-cart3"></i> Cart </a></li>
+            <li class="nav-item"><a href="#" class="nav-link text-uppercase header__link header__link_color-black"> <i
+                  class="bi bi-cart3"></i> Cart </a></li>
           </ul>
         </div>
       </div>
     </nav>
   </header>
-  
+
   <main>
     <section class="murod d-flex align-items-center">
       <div class="container">
         <div class="row align-items-center">
           <div class="col-6">
             <p class="text-danger popins text-uppercase">Pompeo POttery</p>
-            <h1 class="popins fw-bold font-size-43">Unique Porcelain <span class="playfair text-danger font-size-68">&</span> <br> Stone Collection</h1>
-            <p class="text-secondary libre mt-4 mb-5">Unique & modern pottery made by our master in porcelain & stones</p>
+            <h1 class="popins fw-bold font-size-43">Unique Porcelain <span
+                class="playfair text-danger font-size-68">&</span> <br> Stone Collection</h1>
+            <p class="text-secondary libre mt-4 mb-5">Unique & modern pottery made by our master in porcelain & stones
+            </p>
             <a href="#" class="btn btn-danger fw-bold py-2 px-4 font-size-12 rounded-0">Shop Collection</a>
           </div>
           <div class="col-6">
-            <img src="./img/image.png" alt="">
+            <img src="./img/image.png" class="img-fluid" alt="">
           </div>
         </div>
       </div>
     </section>
-    
+
     <section class="shuxrat">
-      
+      <div class="container d-flex flex-column">
+        <div class=" ponpeo">
+          <div class="btn">
+            <p class="text-danger popins text-uppercase mt-4">
+              Product Categories
+            </p>
+            <h1 class="fw-bold font-size-43">Porcelain<span class="playfair text-danger font-size-68">&</span>Pottery
+            </h1>
+          </div>
+        </div>
+        <div class="row d-flex ponpe mt-4">
+          <div class="col-4"> <img src="./img/Frame.png" alt=""></div>
+          <div class="col-4"> <img src="./img/Frame 2.png" alt=""></div>
+          <div class="col-4"> <img src="./img/plates.png" alt=""></div>
+        </div>
+        <div class="mt-5">
+          <div class="row d-flex ">
+            <div class="col-6">
+              <h3>Hand Grafted <br> Pottery since 1990</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius <br> enim in eros
+                elementum.
+                Duis cursus, mi quis viverra ornare, eros dolor <br> interdum nulla, ut commodo diam libero vitae erat.
+                Aenean faucibus nibh et <br> justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus posuere.
+              </p>
+            </div>
+            <div class="col-6">
+              <h3>We Provide Premium <br> Pottery Produts</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius <br> enim in eros
+                elementum.
+                Duis cursus, mi quis viverra ornare, eros dolor <br> interdum nulla, ut commodo diam libero vitae erat.
+                Aenean faucibus nibh et <br> justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus posuere.
+              </p>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
     </section>
+
+    <section class="">
+      <div class="container">
+        <div class="row">
+          <div class="col-6 ">
+            <img src="./img/koza.png" alt="">
+          </div>
+          <div class="col-6">
+            <h2 class="font-size-43 quis">Gold & Black Pottery</h2>
+            <p class="mt-4 mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed <br> do eiusmod tempor
+              incididunt ut labore dolore aua. Ut enim <br> ad minim veniam, quis nostrud exercitationulco laboris nisi
+              <br> ut aliquip ex ea commodo consequatuisaute.
+            </p>
+            <h4>View Details</h4>
+          </div>
+        </div>
+      </div>
+    </section>
+
   </main>
-  
+
   <footer></footer>
-  
-  
-  
+
+
+
   <script src="./script/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
