--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <section class="murod d-flex align-items-center">
       <div class="container">
         <div class="row align-items-center">
-          <div class="col-6">
+          <div class="col-6-lg-md">
             <p class="text-danger popins text-uppercase">Pompeo POttery</p>
             <h1 class="popins fw-bold font-size-43">Unique Porcelain <span
                 class="playfair text-danger font-size-68">&</span> <br> Stone Collection</h1>
@@ -67,14 +67,15 @@
         </div>
         <div class="row d-flex ponpe mt-4">
           <div class="col-4"> <img src="./img/Frame.png" alt=""></div>
-          <div class="col-4"> <img src="./img/Frame 2.png" alt=""></div>
+          <div class="col-4 "> <img src="./img/Frame 2.png" alt=""></div>
           <div class="col-4"> <img src="./img/plates.png" alt=""></div>
         </div>
         <div class="mt-5">
           <div class="row d-flex ">
             <div class="col-6">
               <h3>Hand Grafted <br> Pottery since 1990</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius <br> enim in eros
+              <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius <br>
+                enim in eros
                 elementum.
                 Duis cursus, mi quis viverra ornare, eros dolor <br> interdum nulla, ut commodo diam libero vitae erat.
                 Aenean faucibus nibh et <br> justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus posuere.
@@ -82,7 +83,8 @@
             </div>
             <div class="col-6">
               <h3>We Provide Premium <br> Pottery Produts</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius <br> enim in eros
+              <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius <br>
+                enim in eros
                 elementum.
                 Duis cursus, mi quis viverra ornare, eros dolor <br> interdum nulla, ut commodo diam libero vitae erat.
                 Aenean faucibus nibh et <br> justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus posuere.
@@ -99,23 +101,150 @@
       <div class="container">
         <div class="row">
           <div class="col-6 ">
-            <img src="./img/koza.png" alt="">
+            <img src="./img/Frame (1).png" alt="">
           </div>
           <div class="col-6">
             <h2 class="font-size-43 quis">Gold & Black Pottery</h2>
-            <p class="mt-4 mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed <br> do eiusmod tempor
+            <p class="mt-4 mb-4 text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed <br> do
+              eiusmod tempor
               incididunt ut labore dolore aua. Ut enim <br> ad minim veniam, quis nostrud exercitationulco laboris nisi
               <br> ut aliquip ex ea commodo consequatuisaute.
             </p>
             <h4>View Details</h4>
           </div>
         </div>
+
+        <div>
+          <div class="row">
+            <div class="col-6">
+              <h2 class="font-size-43 quis">Orange Ceramic</h2>
+              <p class="mt-4 mb-4 text-secondary">Pri cu dico labores officiis, odio principes complectitur ad <br> sea.
+                Sea id doctus
+                forensibus, nec lorem vocent aliquam <br> eu. Aliquid definitiones id cum, ad meliore perpetua <br>
+                referrentur sed. Quas suscipit ad mea verear vivendo <br> tincidunt.
+              </p>
+              <h4>View Details</h4>
+            </div>
+            <div class="col-6">
+              <img src="./img/Frame 22.png" alt="">
+            </div>
+          </div>
+        </div>
+
+        <div class="d-flex flex-column align-items-center mt-5">
+          <p class="text-danger popins text-uppercase mt-4">Our online store</p>
+          <h1 class="fw-bold font-size-43">Pottery Collection
+          </h1>
+        </div>
       </div>
+    </section>
+
+    <section>
+      <div class="container ml-4">
+        <div class="row mt-5 w-100%">
+          <div class="col-4">
+            <img src="./img/koza5.png" class="img-fluid d-flex" alt="">
+            <h6 class="mt-3 text-secondary">Decor Plate</h6>
+            <p class=""> $ 65.00 USD </p>
+
+            <li class="nav-item line1"><a href="#"
+                class="nav-link text-uppercase header__link header__link_color-black"></a></li>
+          </div>
+          <div class="col-4">
+            <img src="./img/koza3.png" class="img-fluid" alt="">
+            <h6 class="mt-3 text-secondary">Mint Pottery</h6>
+            <p>$ 75.00 USD </p>
+            <li class="nav-item line1"><a href="#"
+                class="nav-link text-uppercase header__link header__link_color-black"></a></li>
+          </div>
+          <div class="col-4">
+            <img src="./img/koza4.png" class="img-fluid" alt="">
+            <h6 class="mt-3 text-secondary">Set Of Potterys</h6>
+            <p> $ 125.00 USD</p>
+            <li class="nav-item line1"><a href="#"
+                class="nav-link text-uppercase header__link header__link_color-black"></a></li>
+          </div>
+        </div>
+
+        <div>
+          <div class="row mt-5 w-100%">
+            <div class="col-4">
+              <img src="./img/koza7.png" class="img-fluid d-flex" alt="">
+              <h6 class="mt-3 text-secondary">Orange Ceramic</h6>
+              <p class="">$ 55.00 USD </p>
+
+              <li class="nav-item line1"><a href="#"
+                  class="nav-link text-uppercase header__link header__link_color-black"></a></li>
+            </div>
+            <div class="col-4">
+              <img src="./img/koza8.png" class="img-fluid" alt="">
+              <h6 class="mt-3 text-secondary">Dark Bowl</h6>
+              <p>$ 115.00 USD</p>
+              <li class="nav-item line1"><a href="#"
+                  class="nav-link text-uppercase header__link header__link_color-black"></a></li>
+            </div>
+            <div class="col-4">
+              <img src="./img/koza9.png" class="img-fluid" alt="">
+              <h6 class="mt-3 text-secondary">Square Pottery</h6>
+              <p>$ 75.00 USD</p>
+              <li class="nav-item line1"><a href="#"
+                  class="nav-link text-uppercase header__link header__link_color-black"></a></li>
+            </div>
+          </div>
+        </div>
+        <div class="mt-5 koza4">
+          <a href="#" class="btn btn-danger fw-bold koza3">View All Products</a>
+        </div>
+      </div>
+    </section>
+
+    <section class="">
+      <div class="container intro">
+        <div class="d-flex flex-column pl-4 pt-5 intro1">
+          <p class="text-danger text-uppercase">Pompeo POttery</p>
+          <h1 class="popins fw-bold">Ready to start shopping?</h1>
+          <p class="text-secondary libre mt-4 mb-5 intr">Lorem ipsum dolor sit amet, <a href=""
+              class="btn-danger intro3">consectetur adipiscing elit</a> <br> . Suspendisse
+            varius enim in eros elementum.
+          </p>
+          <a href="#" class="btn btn-danger intro2">New Collection</a>
+        </div>
+      </div>
+      </div>
+
+
     </section>
 
   </main>
 
-  <footer></footer>
+  <footer>
+    <section class="footer">
+      <div class="container text-center">
+        <div class="footer-nav mt-5">
+          <img src="./img/telegram.png" alt="">
+          <p class="text-danger text-uppercase mt-4">Latest news</p>
+          <h1 class="fw-bold font-size-43">Latest news<span class="playfair text-danger font-size-68">&</span>New
+            updates
+          </h1>
+          <nav class="navbar">
+            <div class="container-fluid intro-footer mt-5">
+              <form class="d-flex" role="search">
+                <input class="form-control me-2 intro4" type="Enter your email" placeholder="Enter your email"
+                  aria-label="Search">
+                <button class="btn btn-dark" type="submit">SUBSCRIBE</button>
+              </form>
+            </div>
+          </nav>
+        </div>
+       
+          <div class="box">
+
+          </div>
+      </div>      
+    </section>
+
+
+  </footer>
 
 
 
