--- a/index.html
+++ b/index.html
@@ -198,8 +198,9 @@
       </div>
     </section>
 
-    <section class="">
-      <div class="container intro">
+    <section class="intro">
+
+      <div class="container ">
         <div class="d-flex flex-column pl-4 pt-5 intro1">
           <p class="text-danger text-uppercase">Pompeo POttery</p>
           <h1 class="popins fw-bold">Ready to start shopping?</h1>
@@ -235,14 +236,28 @@
               </form>
             </div>
           </nav>
-        </div>
-       
-          <div class="box">
-
+          
+          <div class="d-flex justify-content-center">
+            <div class="d-flex flex-column align-items-center ">
+              <img src="./img/1213.png" alt="">
+              <p>Sign up for our newsletter</p>
+            </div>
           </div>
-      </div>      
-    </section>
 
+        </div>
+
+
+
+    </section>
+    <div class="container d-flex align-items-center ">
+      <div class="mt-5 intro-footer">
+        <img src="./img/Pompeo.png" alt="">
+        <p class="">I have always striven to fix beauty in wood, stone, <br>glass or pottery, that has been my creed.</p>
+      </div>
+    </div>
+    <section>
+
+    </section>
 
   </footer>
 
