--- a/index.html
+++ b/index.html
@@ -236,27 +236,47 @@
               </form>
             </div>
           </nav>
-          
-          <div class="d-flex justify-content-center">
-            <div class="d-flex flex-column align-items-center ">
-              <img src="./img/1213.png" alt="">
-              <p>Sign up for our newsletter</p>
+
+          <div class="d-flex ">
+            <div class="d-flex mx-auto introd">
+
+              <p class="pt-1 text-secondary mb-5 mt-4"> <img src="./img/1213.png" alt=""> Sign up for our newsletter</p>
             </div>
           </div>
-
         </div>
-
-
-
     </section>
-    <div class="container d-flex align-items-center ">
-      <div class="mt-5 intro-footer">
-        <img src="./img/Pompeo.png" alt="">
-        <p class="">I have always striven to fix beauty in wood, stone, <br>glass or pottery, that has been my creed.</p>
-      </div>
-    </div>
-    <section>
+    <div class="container d-flex justify-content-center mt-5">
+      <div class="mx-auto d-flex flex-column align-items-center">
+        <img src="./img/Pompeo.png" class="mb-4" alt="">
+        <p class=" d-flex pt-1">I have always striven to fix beauty in wood, stone, <center> glass or pottery, that
+            has been my creed.</p>
 
+      </div>
+
+
+    </div>
+
+    </div>
+
+    <section class="container">
+      <div class="mt-5 ">
+        <div class="row">
+          <div class="col-4 text-center">
+            <img src="./img/email.png" class="img-fluid" alt="">
+            <h2 class="index">EMAIL</h2>
+            <p>pompeopotery@gmail.com</p>
+          </div>
+          <div class="col-4 text-center ml-2">
+            <img src="./img/find.png" class="img-fluid" alt="">
+            <h2 class="index">FIND</h2>
+            <p>Central Park, Manhattan <center> New York, 1101</p>
+          </div>
+          <div class="col-4 text-center">
+            <img src="./img/call.png" class="img-fluid" alt="">
+            <h2 class="index">CALL</h2>
+            <p>+1 292 345 678</p>
+          </div>
+        </div>
     </section>
 
   </footer>
