https://github.com/Shuxrat80836/ponpeo.git

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
   </header>
 
   <main>
-    <section class="murod d-flex align-items-center">
+    <section class="murod d-lg-flex md-4 align-items-center">
       <div class="container">
         <div class="row align-items-center">
-          <div class="col-6-lg-md">
+          <div class="col-lg-6">
             <p class="text-danger popins text-uppercase">Pompeo POttery</p>
             <h1 class="popins fw-bold font-size-43">Unique Porcelain <span
                 class="playfair text-danger font-size-68">&</span> <br> Stone Collection</h1>
@@ -55,7 +55,7 @@
     </section>
 
     <section class="shuxrat">
-      <div class="container d-flex flex-column">
+      <div class="container d-lg-flex flex-column">
         <div class=" ponpeo">
           <div class="btn">
             <p class="text-danger popins text-uppercase mt-4">
@@ -66,13 +66,13 @@
           </div>
         </div>
         <div class="row d-flex ponpe mt-4">
-          <div class="col-4"> <img src="./img/Frame.png" alt=""></div>
-          <div class="col-4 "> <img src="./img/Frame 2.png" alt=""></div>
-          <div class="col-4"> <img src="./img/plates.png" alt=""></div>
+          <div class="col-lg-4"> <img src="./img/Frame.png" alt=""></div>
+          <div class="col-lg-4 mt-2 mb-2 "> <img src="./img/Frame 2.png" alt=""></div>
+          <div class="col"> <img src="./img/plates.png" alt=""></div>
         </div>
         <div class="mt-5">
           <div class="row d-flex ">
-            <div class="col-6">
+            <div class="col-lg-6 mb-4">
               <h3>Hand Grafted <br> Pottery since 1990</h3>
               <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius <br>
                 enim in eros
@@ -81,7 +81,7 @@
                 Aenean faucibus nibh et <br> justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus posuere.
               </p>
             </div>
-            <div class="col-6">
+            <div class="col">
               <h3>We Provide Premium <br> Pottery Produts</h3>
               <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius <br>
                 enim in eros
@@ -100,10 +100,10 @@
     <section class="">
       <div class="container">
         <div class="row">
-          <div class="col-6 ">
+          <div class="col-lg-6 md-4">
             <img src="./img/Frame (1).png" alt="">
           </div>
-          <div class="col-6">
+          <div class="col">
             <h2 class="font-size-43 quis">Gold & Black Pottery</h2>
             <p class="mt-4 mb-4 text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed <br> do
               eiusmod tempor
@@ -116,7 +116,7 @@
 
         <div>
           <div class="row">
-            <div class="col-6">
+            <div class="col-lg-6">
               <h2 class="font-size-43 quis">Orange Ceramic</h2>
               <p class="mt-4 mb-4 text-secondary">Pri cu dico labores officiis, odio principes complectitur ad <br> sea.
                 Sea id doctus
@@ -140,9 +140,9 @@
     </section>
 
     <section>
-      <div class="container ml-4">
+      <div class="container">
         <div class="row mt-5 w-100%">
-          <div class="col-4">
+          <div class="col-lg-4">
             <img src="./img/koza5.png" class="img-fluid d-flex" alt="">
             <h6 class="mt-3 text-secondary">Decor Plate</h6>
             <p class=""> $ 65.00 USD </p>
@@ -150,14 +150,14 @@
             <li class="nav-item line1"><a href="#"
                 class="nav-link text-uppercase header__link header__link_color-black"></a></li>
           </div>
-          <div class="col-4">
+          <div class="col">
             <img src="./img/koza3.png" class="img-fluid" alt="">
             <h6 class="mt-3 text-secondary">Mint Pottery</h6>
             <p>$ 75.00 USD </p>
             <li class="nav-item line1"><a href="#"
                 class="nav-link text-uppercase header__link header__link_color-black"></a></li>
           </div>
-          <div class="col-4">
+          <div class="col">
             <img src="./img/koza4.png" class="img-fluid" alt="">
             <h6 class="mt-3 text-secondary">Set Of Potterys</h6>
             <p> $ 125.00 USD</p>
@@ -168,7 +168,7 @@
 
         <div>
           <div class="row mt-5 w-100%">
-            <div class="col-4">
+            <div class="col-lg-4 mb-4">
               <img src="./img/koza7.png" class="img-fluid d-flex" alt="">
               <h6 class="mt-3 text-secondary">Orange Ceramic</h6>
               <p class="">$ 55.00 USD </p>
@@ -176,14 +176,14 @@
               <li class="nav-item line1"><a href="#"
                   class="nav-link text-uppercase header__link header__link_color-black"></a></li>
             </div>
-            <div class="col-4">
+            <div class="col">
               <img src="./img/koza8.png" class="img-fluid" alt="">
               <h6 class="mt-3 text-secondary">Dark Bowl</h6>
               <p>$ 115.00 USD</p>
               <li class="nav-item line1"><a href="#"
                   class="nav-link text-uppercase header__link header__link_color-black"></a></li>
             </div>
-            <div class="col-4">
+            <div class="col">
               <img src="./img/koza9.png" class="img-fluid" alt="">
               <h6 class="mt-3 text-secondary">Square Pottery</h6>
               <p>$ 75.00 USD</p>
@@ -201,7 +201,7 @@
     <section class="intro">
 
       <div class="container ">
-        <div class="d-flex flex-column pl-4 pt-5 intro1">
+        <div class="d-lg-flex flex-column pl-4 pt-5 intro1">
           <p class="text-danger text-uppercase">Pompeo POttery</p>
           <h1 class="popins fw-bold">Ready to start shopping?</h1>
           <p class="text-secondary libre mt-4 mb-5 intr">Lorem ipsum dolor sit amet, <a href=""
@@ -245,7 +245,7 @@
           </div>
         </div>
     </section>
-    <div class="container d-flex justify-content-center mt-5">
+    <div class="container d-lg-flex justify-content-center mt-5">
       <div class="mx-auto d-flex flex-column align-items-center">
         <img src="./img/Pompeo.png" class="mb-4" alt="">
         <p class=" d-flex pt-1">I have always striven to fix beauty in wood, stone, <center> glass or pottery, that
@@ -255,24 +255,22 @@
 
 
     </div>
-
     </div>
-
     <section class="container">
-      <div class="mt-5 ">
+      <div class="">
         <div class="row">
-          <div class="col-4 text-center">
+          <div class="col-lg-4 text-center">
             <img src="./img/email.png" class="img-fluid" alt="">
             <h2 class="index">EMAIL</h2>
             <p>pompeopotery@gmail.com</p>
           </div>
-          <div class="col-4 text-center ml-2">
-            <img src="./img/find.png" class="img-fluid" alt="">
+          <div class="col text-center">
+            <img src="./img/find.png" class="" alt="">
             <h2 class="index">FIND</h2>
             <p>Central Park, Manhattan <center> New York, 1101</p>
           </div>
-          <div class="col-4 text-center">
-            <img src="./img/call.png" class="img-fluid" alt="">
+          <div class="col text-center">
+            <img src="./img/call.png" class="" alt="">
             <h2 class="index">CALL</h2>
             <p>+1 292 345 678</p>
           </div>
